Custom Unity Package Name

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "Shader"
     ],
     "author": {
-        "name": "taecg",
-        "email": "taecg@qq.com"
-    }
+        "name": "KaiGe",
+        "email": "894712026@qq.com",
+        "url": "https://www.unity3d.com"
+      }
 }
